--- a/echo/public/views/hello.html
+++ b/echo/public/views/hello.html
@@ -1,4 +1,9 @@
-{{define "hello"}}
-  <h1>{{.ServiceInfo.Title}}</h1>
-  <h2>{{.Content}}</h2>
-{{end}}
+<html>
+	<head>
+		<title>{{.ServiceInfo.Title}}</title>
+	</head>
+	<body>
+		<h1>{{.ServiceInfo.Title}}</h1>
+		<h2>{{.Content}}</h2>
+	</body>
+</html>
