echoでcssを使ってみる

--- a/echo/public/views/hello.html
+++ b/echo/public/views/hello.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>{{.ServiceInfo.Title}}</title>
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	</head>
 	<body>
 		<h1>{{.ServiceInfo.Title}}</h1>
